src/styles/style.css
/* ... */
.toggl-button.asana-spreadsheet {
  margin-right: 5px; /* Ensure any additional controls are spaced  */
}

.toggl-button.asana-board-view {
  opacity: 0;
}

.BoardCard--hover .toggl-button.asana-board-view {
  opacity: 1;
}

.BoardCardLayout.toggl:hover .toggl-button.asana-board-view {
  opacity: 1;
}

/********* PODIO *********/
.toggl-button.podio {
  width: 100px;
  margin-left: 4px;
}

/********* GITLAB *********/
.toggl-button.gitlab {
  margin-top: 7px;
}

@media (max-width: 991px) {
  .toggl-button.gitlab {
    margin-right: 8px;
  }
}

/********* JIRA *********/
.toggl-button.jira {
  margin-top: 0.2em;
}

.toggl-button.jira2017 {
  margin-top: 0.2em;
  margin-left: 10px;
  cursor: pointer !important;
  color: #42526e !important;
  box-shadow: none;
}

.toggl-button.jira2018 {
  margin-left: 8px;
  margin-top: 0;
  position: relative; /* margin interferes with Jira layout, using relative pos instead */
  top: 2px;
  cursor: pointer;
}

.toggl-button.jira2018-modal {
  margin-top: 0.5em;
  margin-left: 0;
  cursor: pointer;
}

/********* UNFUDDLE *********/
.toggl-button.unfuddle {
  margin-left: 4px;
  line-height: 18px;
  padding-left: 18px;
  background-size: 16px;
}

/********* TRELLO *********/
.toggl-button.trello {
  text-decoration: none;
  cursor: pointer;
  color: #737373;
}

.toggl-button.trello:not(.toggl-button-edit-form-button) svg {
  margin-left: -5px;
  margin-right: 2px;
}

.toggl-button.trello-list:not(.toggl-button-edit-form-button) {
  visibility: hidden;
  pointer-events: none;
}
.checklist-item-details:hover .toggl-button.trello-list, .toggl-button.trello-list.active:not(.toggl-button-edit-form-button) {
  visibility: visible;
  pointer-events: all;
  height: 100%;
  width: 100%;
  background-position: center !important;
}
.trello-tb-wrapper .toggl-button {
  color: #444;
}

/********* BASECAMP *********/
.toggl-button.basecamp {
  font-size: 12px;
  height: 14px;
  margin-left: 3px;
  line-height: 14px;
  padding-left: 19px;
  background-size: 17px;
  visibility: hidden;
}

/********* BASECAMP CLASSIC *********/
.toggl-button.basecamphq {
  font-size: 12px;
  height: 15px;
  margin-left: 3px;
  line-height: 14px;
  padding-left: 19px;
  background-size: 17px;
  visibility: hidden;
}

.toggl-button.basecamphq:hover {
  color: #000000 !important;
}

.active_selection .toggl-button.basecamphq,
.toggl-button.basecamphq[data-behavior='selectable_target'] {
  visibility: visible !important;
}

/********* BASECAMP 3 *********/
.todo .toggl-button.basecamp3 {
  transition: opacity 150ms ease;
  display: inline;
  position: absolute;
  opacity: 0;
  margin-top: 2px;
  margin-left: 150px;
  white-space: nowrap;
}

.todo:not(.selected):hover .toggl-button.basecamp3,
.todo:not(.selected) .toggl-button.basecamp3.active,
.todo:not(.selected) .metadata .toggl-button.basecamp3 {
  opacity: 1;
}
.todo:not(.selected).completed .toggl-button.basecamp3 {
  margin-left: 6px;
  transform: scale(0.8) translateY(-3px);
}
.todo:not(.selected) .metadata .toggl-button.basecamp3 {
  margin-left: 6px;
  transform: scale(0.9) translateY(-2px);
}


.card-grid .toggl-button.basecamp3 {
  opacity: 0 !important;
}

/********* TOGGL-PLAN *********/
a.toggl-button.toggl-plan {
  margin-top: -1px;
  margin-left: 16px;
}

/********* Produck *********/
.toggl-button.produck {
  padding-left: 25px;
  color: #a9b0c4;
  font-size: 13px;
}
.toggl-button.produck:hover {
  color: #2693ff;
  text-decoration: none;
}

/********* PRODUCTEEV *********/
.toggl-button.producteev {
  margin-left: 12px;
  margin-bottom: 2px;
}

/********* REDBOOTH *********/
.toggl-button.redbooth {
  font-size: 12px;
  line-height: 16px;
  padding-left: 18px;
  background-size: 16px;
}

/********* WORKSECTION *********/
.toggl-button.worksection-taskview {
  margin: 10px 15px;
}

.toggl-button.worksection-listview {
  margin-right: 5px;
}

/********* REVIEWBOARD *********/
.toggl-button.reviewboard {
  margin-top: 4px;
  margin-left: 6px;
}

/********* SIFTER *********/
.toggl-button.sifterapp {
  float: right;
}

.issue-detail-subject .toggl-button.sifterapp {
  margin-top: 7px;
}

/********* GOOGLE DOCS *********/
.toggl-button.google-docs:not(.toggl-button-edit-form-button) {
  background-size: 17px;
  padding-left: 19px;
  margin-left: 5px;
}

.toggl-button.google-docs.min:not(.toggl-button-edit-form-button) {
  margin-bottom: -10px;
  margin-left: 5px;
}

/********* REDMINE *********/
.toggl-button.redmine {
  float: right;
  font-size: 0.8em;
  font-weight: normal;
  margin-top: 4px;
}

/********* CAPSULECRM *********/
.toggl-button.capsule {
  position: absolute;
  margin-left: 5px;
}

.task-item-title .toggl-button.capsule {
  position: relative;
  top: 5px;
  margin-top: -5px;
}
/********* ZENDESK *********/
.toggl-button.zendesk:not(.toggl-button-edit-form-button) {
  margin: 10px 10px 0 0;
}

[data-test-id="customer-context-tab-navigation"] .toggl-button.toggl-button.zendesk-agent-ws {
  margin-left: 10px;
  margin-top: 2px;
}

.toggl-button.zendesk-agent-ws:not(.toggl-button-edit-form-button) {
  margin-right: 15px;

  font-weight: initial;
}

.toggl-button.zendesk--2021 {
  align-self: center;
}

/********* ANYDO *********/
.toggl-button.anydo {
  color: #099acb;
  margin-left: 10px;
}

.toggl-button.anydo--2018 {
  margin: 3px 25px;
  position: absolute;
  right: 0;
}

.TaskItem .toggl-button.anydo--2018__taskItem {
  visibility: hidden;
  position: absolute;
  top: 15px;
  right: 15px;
}

*:hover > .toggl-button.anydo--2018,
*:hover > .toggl-button.anydo--2018__taskItem {
  visibility: visible;
}

.TaskItemControls--in + .toggl-button.anydo--2018__taskItem {
  visibility: hidden;
}

/********* WUNDERLIST *********/
.toggl-button.wunderlist {
  text-decoration: none;
  cursor: pointer;
  color: #737373;
  margin: 0px;
  display: inline;
  opacity: 0.2;
}
/* ... */

